Just added the code for project with react part and css style

--- a/calculator/calc/src/App.css
+++ b/calculator/calc/src/App.css
@@ -1,38 +1,103 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*{
+  box-sizing: border-box;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body{
+  margin: 0;
+  background-color: #b582b5;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-family: 'Roboto',sans-serif;
+  font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
+.calculator{
+  background-color: #000;
+  width: 250px;
+  height: 390px;
+  padding: 5px;
+  display: flex;
+  flex-wrap: wrap;
+  box-shadow: 2px 2px 5px rgba(0,0,0,0.6);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.display{
+  width: 100%;
+  text-align: right;
+  position: relative;
+  padding: 20px 10px;
+  height: 70px;
+  font-size: 35px;
+  color: #fff;
+}
+
+.display small{
+  position: absolute;
+  font-size: 12px;
+  top: 5px;
+  right: 5px;
+  color: #EE9406;
+}
+
+.nums-container{
+  width: 75%;
+}
+
+.ops-container{
+  width: 25%;
+}
+
+button{
+  border: none;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin: 5px;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+button:hover{
+  opacity: 0.9;
+}
+
+button:active{
+  transform: scale(0.9);
+}
+
+button:focus{
+  outline: none;
+}
+
+button.big-v{
+  height: 110px;
+  border-radius: 50px;
+}
+
+button.big-h{
+  width: 110px;
+  border-radius: 50px;
+}
+
+button.orange{
+  background-color: #EE9406;
+  color: #fff;
+}
+
+button.dark-grey{
+  background-color: #323232;
+  color: #fff;
+}
+
+button.light-grey{
+  background-color: #A5A5A5;
+  color: #000;
+  font-weight: bold;
+}
+
+button.ac{
+  margin-right: 50%;
 }
