--- a/drum-machine/drum_machine/src/App.css
+++ b/drum-machine/drum_machine/src/App.css
@@ -1,38 +1,58 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
+body{
+  background-image: url("https://www.chromethemer.com/download/hd-wallpapers/lights-of-color-1920x1080.jpg");
+  font-family: 'Lato', sans-serif;
+}
+
+.container{
+  display: flex;
+  align-items: center;
+  justify-content:center;
+  height: 100vh;
+}
+
+.display{
+  background-color: #b3b3b3;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 20px;
+  width: 400px;
+  box-shadow: 3px 3px 6px rgba(0,0,0,0.6);
+}
+
+.display h1 {
+  display: block;
+  width: 100%;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.drum-pad{
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content:center;
+  width: 100px;
+  height: 100px;
+  border: 1px solid #333;
+  border-radius: 5px;
+  margin:10px;
+  font-size: 40px;
+  box-shadow: 3px 3px 6px rgba(0,0,0,0.5);
+  background-color:grey;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.drum-pad:active{
+  opacity: 0.6;
+  transform: scale(0.95);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#content{
+    background-color: gray;
+    margin: 15px auto;
+    padding: 15px;
+    padding-top: 15px;
+    padding-right: 15px;
+    padding-bottom: 15px;
+    padding-left: 15px;
+    box-sizing: border-box;
 }
