--- a/pomodoro-clock/pomodoro_clock/src/App.css
+++ b/pomodoro-clock/pomodoro_clock/src/App.css
@@ -1,3 +1,5 @@
+@import "~font-awesome/css/font-awesome.css";
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 *{
